fixed html overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,6 @@
 html {
   min-height: 100vh;
   box-sizing: border-box;
-  overflow: auto;
 }
 
 body {
